syntax = "proto3";

package pb;
import "gameroom.proto";
import "auth.proto";

option go_package="github.com/crew_0/poker/internal/grpc/pb";

message CreateGameRoomRequest {
  Requester requester = 1;
}

message CreateGameRoomResponse {
  GameRoom game_room = 1;
}
