syntax = "proto3";

package pb;
import "gameroom.proto";
import "auth.proto";

option go_package="github.com/crew_0/poker/internal/grpc/pb";

message JoinGameRoomRequest {
  Requester requester = 1;
  string game_room_id = 2;
}

message JoinGameRoomResponse {
  GameRoom game_room = 1;
}
